validation on forms added and some footer data changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,7 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-.yarn/install-state.gz
+
 
 # testing
 /coverage
@@ -32,5 +30,5 @@ yarn-error.log*
 .vercel
 
 # typescript
-*.tsbuildinfo
-next-env.d.ts
+# *.tsbuildinfo
+# next-env.d.ts
