--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@prisma/client": "^5.20.0",
+    "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.14.0",
     "next": "14.2.13",
+    "nodemailer": "^6.9.15",
     "nprogress": "^0.2.0",
     "pg": "^8.13.0",
     "react": "^18",
@@ -21,6 +23,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/nprogress": "^0.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
