--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.10.3",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
@@ -16,12 +17,13 @@
     "@prisma/client": "^5.20.0",
     "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.14.0",
-    "next": "14.2.13",
+    "framer-motion": "^11.11.9",
+    "next": "^14.2.13",
     "nodemailer": "^6.9.15",
     "nprogress": "^0.2.0",
     "pg": "^8.13.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
