--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "@prisma/client": "^5.20.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@sendgrid/mail": "^8.1.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "firebase": "^10.14.0",
-    "framer-motion": "^11.11.9",
+    "framer-motion": "^11.11.11",
+    "lucide-react": "^0.454.0",
     "next": "^14.2.13",
     "nodemailer": "^6.9.15",
     "nprogress": "^0.2.0",
@@ -28,7 +32,8 @@
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@types/node": "^20",
