--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sendgrid/mail": "^8.1.3",
+    "@shadcn/ui": "^0.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
