--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.3.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.5",
+    "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
     "tailwind-merge": "^2.5.4"
@@ -44,6 +45,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/shortid": "^2.2.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
