--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/bebas-neue": "^5.1.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
+    "@next/third-parties": "^15.1.3",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@sendgrid/mail": "^8.1.3",
