--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=bionicsusedparts.appspot.com
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=20512526525
 NEXT_PUBLIC_FIREBASE_APP_ID=1:20512526525:web:6f30d92e483ea1570f27d4
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-SC89HBDB7N
+EMAIL_USER=briangee.autoparts@gmail.com
+EMAIL_APP_PASSWORD=wgmm upmo ctdx wsko
