--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/material": "^6.1.4",
     "@next/third-parties": "^15.1.3",
     "@prisma/client": "^5.20.0",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
     "@sendgrid/mail": "^8.1.3",
     "@shadcn/ui": "^0.0.4",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
     "framer-motion": "^11.11.11",
@@ -37,7 +39,8 @@
     "shortid": "^2.2.16",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14",
-    "tailwind-merge": "^2.5.4"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@types/node": "^20",
