--- a/package.json
+++ b/package.json
@@ -23,11 +23,15 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@sendgrid/mail": "^8.1.3",
     "@shadcn/ui": "^0.0.4",
+    "aws-sdk": "^2.1692.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^10.14.0",
+    "firebase-admin": "^13.5.0",
+    "formidable": "^3.5.4",
     "framer-motion": "^11.11.11",
     "lucide-react": "^0.454.0",
+    "multer": "^2.0.2",
     "next": "^14.2.13",
     "nodemailer": "^6.10.0",
     "nprogress": "^0.2.0",
@@ -44,6 +48,8 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.16",
     "@types/nprogress": "^0.2.3",
